# CMakeFramework

./: .gitignore  CMakeLists.txt  README.md  add_ut.cmake  create_executable.cmake  create_module.cmake  executable_from.cmake  fetch_gtest.cmake
Common/: CMakeLists.txt
Common/include/: Std.hpp
Main/: CMakeLists.txt
Main/include/: Main.hpp
Main/src/: Main.cpp  main.cpp
Main/tests/: CMakeLists.txt  MainTest.cpp
cmake/: fetch_dependencies.cmake
sampleProject/: CMakeLists.txt
sampleProject/Headers/: CMakeLists.txt
sampleProject/Headers/include/: cout.hpp  string.hpp
sampleProject/MainModule/: CMakeLists.txt
sampleProject/MainModule/include/: MainClass.hpp
sampleProject/MainModule/src/: MainClass.cpp  main.cpp
sampleProject/MainModule/test/: MainClassTests.cpp
sampleProject/MainModule/tests/: CMakeLists.txt
sampleProject/Module/: CMakeLists.txt
sampleProject/Module/include/: Display.hpp  User.hpp
sampleProject/Module/src/: Display.cpp  User.cpp
